--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "swiper": "^9.4.1",
     "tailwindcss": "^3.2.6",
     "vite": "^7.2.4",
-    "vite-plugin-svgr": "^4.5.0"
+    "vite-plugin-svgr": "^4.5.0",
+    "vite-svg-loader": "^5.1.0"
   }
 }
